typewriter animation fixed on smaller viewports

--- a/myprojectpage/src/index.css
+++ b/myprojectpage/src/index.css
@@ -9,27 +9,30 @@ body {
   color: white;
   background-color: #1A1A1D;
 }
-
-.typewriter {
-  overflow: hidden;
-  /* Ensures the content is not revealed until the animation */
-  /* border-right: .15em solid white; */
-  /* The typwriter cursor */
-  white-space: nowrap;
-  /* Keeps the content on a single line */
-  margin: 0 auto;
-  /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em;
-  /* Adjust as needed */
-  animation:
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
+@media (min-width:850px) {
+  .typewriter {
+    overflow: hidden;
+    /* Ensures the content is not revealed until the animation */
+    /* border-right: .15em solid white; */
+    /* The typwriter cursor */
+    white-space: nowrap;
+    /* Keeps the content on a single line */
+    margin: 0 auto;
+    /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em;
+    /* Adjust as needed */
+    animation:
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
 }
 
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
-}
 
 .topSection h3 {
   color: #950740;
